# minecraft-server-query

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/minecraft_server_query/: all.html  constant.DEFAULT_PORT.html  constant.DEFAULT_TIMEOUT.html  index.html  struct.BasicStat.html  struct.FullStat.html  struct.Token.html
docs/minecraft_server_query/async_std/: fn.query.html  index.html  struct.QueryClient.html
docs/minecraft_server_query/blocking/: fn.query.html  index.html  struct.QueryClient.html
docs/minecraft_server_query/packets/: enum.PacketType.html  index.html  sidebar-items.js  struct.BasicStat.html  struct.FullStat.html  struct.Handshake.html
docs/minecraft_server_query/tokio/: fn.query.html  index.html  sidebar-items.js  struct.QueryClient.html
docs/minecraft_server_status/: all.html  index.html  sidebar-items.js
docs/minecraft_server_status/query/: constant.DEFAULT_PORT.html  constant.DEFAULT_TIMEOUT.html  index.html  sidebar-items.js  struct.BasicStat.html  struct.FullStat.html  struct.Token.html
docs/minecraft_server_status/query/async_std/: fn.query.html  index.html  sidebar-items.js  struct.QueryClient.html
docs/minecraft_server_status/query/blocking/: fn.query.html  index.html  sidebar-items.js  struct.QueryClient.html
docs/minecraft_server_status/query/packets/: enum.PacketType.html  index.html  struct.BasicStat.html  struct.FullStat.html  struct.Handshake.html
docs/minecraft_server_status/query/tokio/: fn.query.html  index.html  struct.QueryClient.html
docs/src/minecraft_server_query/: async_std.rs.html  blocking.rs.html  lib.rs.html  packets.rs.html  tokio.rs.html
docs/src/minecraft_server_status/: lib.rs.html
src/: async_std.rs  blocking.rs  lib.rs  tokio.rs
src/query/: async_std.rs  blocking.rs  mod.rs  packets.rs  tokio.rs
(+8 files in other folders)
