[package]
name = "minecraft-server-status"
version = "0.1.0"
authors = ["AldanTanneo <aldantanneo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
tokio = {version = "1.17", features = ["net", "time"], optional = true}
async-std = {version = "1.10", optional = true}

[dev-dependencies]
tokio = {version = "1.17", features = ["net", "rt-multi-thread", "macros", "time"]}
