[package]
name = "minecraft-server-query"
description = "A Rust library for getting Minecraft server status using the Query protocol."
version = "0.1.0"
authors = ["AldanTanneo <aldantanneo@gmail.com>"]
documentation = "https://aldantanneo.github.io/minecraft-server-query"
homepage = "https://github.com/AldanTanneo/minecraft-server-query"
keywords = ["minecraft", "query", "server", "ping", "status", "udp"]
license = "MIT"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
tokio = {version = "1.17", features = ["net", "time"], optional = true}
async-std = {version = "1.10", optional = true}

[dev-dependencies]
tokio = {version = "1.17", features = ["net", "rt-multi-thread", "macros", "time"]}
